kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multimediasaver
  namespace: multimediasaver
  labels:
    app: multimediasaver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: multimediasaver
  template:
    metadata:
      labels:
        app: multimediasaver
    spec:
      serviceAccountName: dockerhub-service-account
      containers:
      - name: multimediasaver
        image: imitso/multimediasaver:v1.0.7
        ports:
        - containerPort: 3001
        resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
